--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
     <div class="container">
-        <video class="backvid" src="resource/galaxy.mp4" autoplay loop muted plays-inline></video>
+        <video class="backvid" src="assests/galaxy.mp4" autoplay loop muted plays-inline></video>
 
         <header>
             <ul class="navbar">
-                <li><a href="portfolio.html">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="projects.html">PROJECTS</a></li>
                 <li><a href="experience.html">EXPERIENCE</a></li>
                 <li><a href="achievement.html">ACHIEVEMENT</a></li>
@@ -36,7 +36,7 @@
                     </div>
                 </div>
             </div>
-            <img src="resource/profilepic.jpg" alt="Profile Picture">
+            <img src="assests/profilepic.jpg" alt="Profile Picture">
         </div>
 
         <div class="about">
